# apt-cacher-ng

./: CMakeLists.txt  ChangeLog  INSTALL  README.md  TODO  build.sh
client/: CMakeLists.txt  client.cc
conf/: acng.conf.in  archlx_mirrors  cygwin_mirrors  epel_mirrors  fedora_mirrors  kali_mirrors  report.html  sfnet_mirrors  sl_mirrors  ubuntu_mirrors
contrib/: apt-cacher-ng.service
dbgen/: Makefile  deburlgen.pl  sig-debian  sig-fsnap  sig-slsnap  sig-ubuntu
dbgen/extra/: deb_mirrors
doc/: Makefile  README
doc/html/: howtos.html  maint.html
doc/man/: acngfs.8
doc/src/: README.but  acngfs.but
fs/: CMakeLists.txt  httpfs.cc
scripts/: Makefile.release
src/: CMakeLists.txt  ac3rdparty.cc  ac3rdparty.h  acbuf.cc  acbuf.h  acerrno.cc  acfg.cc  acfg.h  acfg_defaults.cc  acfgshared.h  aclogger.cc  aclogger.h  acngtool.cc  aconnect.cc  aconnect.h  acregistry.cc  acregistry.h  acsmartptr.h  acsyscap.h.in  actemplates.h  actypes.h  ahttpurl.cc  ahttpurl.h  apt-cacher.cc  astrop.cc  astrop.h  atcpstream.cc  atcpstream.h  bgtask.cc  bgtask.h  cacheman.cc  cacheman.h  caddrinfo.cc  caddrinfo.h  cleaner.cc  cleaner.h  config.h  conn.cc  conn.h  conserver.cc  (+46 more)
systemd/: CMakeLists.txt
tests/: CMakeLists.txt  apptests.sh  cascade.sh
tests/cmdline/: apt-cacher-ng.sh
tests/src/: it_job.cc  ut_algos.cc  ut_cacheman.cc  ut_http.cc  ut_io.cpp
